# Jaiqu

./: .gitignore  Example.ipynb  Firelink.ipynb  LICENSE  README.md  implementation.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  tox.ini
.github/workflows/: python-publish.yml
jaiqu/: __init__.py  cli.py  helpers.py  jaiqu  jaiqu.py  jaiqu_burr.py  jaiqu_burr_granular.py  jaiqu_burr_straight_port.py
jaiqu/tests/: llm_schema.json
jaiqu/tests/anthropic/: schema.json
jaiqu/tests/llms/openai/: schema.json
jaiqu/tests/openai/: input.json  schema.json
samples/: data.json  schema.json
tests/: test_jaiqu.py
tests/calendar/: event.schema.json
tests/calendar/gcal/: input.json
tests/calendar/outlook/: input.json
tests/llms/: errors.schema.json  llms.schema.json
tests/llms/anthropic/: input.json
tests/llms/arize_openetelemetry/: input.json
